--- a/resources/mainwindow.ui
+++ b/resources/mainwindow.ui
@@ -73,6 +73,9 @@
          </property>
          <item>
           <widget class="QPushButton" name="bt_fluseDir">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -152,6 +155,9 @@
          </item>
          <item>
           <widget class="QPushButton" name="bt_taskPause">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -177,6 +183,9 @@
          </item>
          <item>
           <widget class="QPushButton" name="bt_taskStop">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
