--- a/resources/mainwindow.ui
+++ b/resources/mainwindow.ui
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>SampleStudio  v3.7.2</string>
+   <string>ChiaPlot</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,7,0,0">
    <property name="spacing">
